# PortForwardX

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  InstallRuntimeDeps.cmake.in
docs/: manual.md
include/portforwardx/: portforwardx.hpp  version.hpp
include/portforwardx/net/: dns_resolver.hpp  forward_config.hpp  forwarder.hpp
scripts/: run_client.bat  run_client.ps1  run_client.sh  run_server.bat  run_server.ps1  run_server.sh
src/: main.cpp  version.cpp
src/net/: dns_resolver.cpp  forward_session.cpp  forward_session.hpp  forwarder.cpp  socket_platform.cpp  socket_platform.hpp
tests/: local_e2e_test.cpp  local_udp_e2e_test.cpp
